2.12.7 (22-08-2025)
- Bug fix: Ensuring that field PersonData.place only takes up to 30 characteres which seems to be the limit in CGD [#ISCTE-FENIXEDU-1204]

2.12.6 (29-07-2025)
- Refactor: Updates CgdForm43Sender due to ProfessionalSituationConditionType refactor [#qubIT-Fenix-7009]

2.12.5 (13-01-2025)
- Refactor: Reuse existing test data initialization methods [#qubIT-Fenix-5150]

2.12.4 (14-10-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]

2.12.3 (03-09-2024)
- Improvement: Add support to setup credentials in CgdStudentPhotoClient constructor [FENIX-15817]
- Bug Fix: CgdIntegrationService - NumberFormatException when student number not a number. (FENIX-15402) [ISCTE-FENIXEDU-637]
- Bug Fix: Support student numbers with 6 digits [FENIX-15818]

2.12.2 (28-08-2024)
- Refactor:  Support to  multiple active calendars [#UL-FC-5116]

2.12.1 (13-08-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]

2.12.0 (17-06-2024)
- Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]

2.11.0 (04-06-2024)
- Refactor: Removes spring controllers [#qubIT-Omnis-5887]

2.10.2 (17-04-2024)
- Bug fix: FENIX-15242 Fixes WriteOnRead when searchMember is executed [#qubIT-Fenix-5150]

2.10.1 (06-02-2024)
- Bug fix: FENIX-14082 - fixed NPE when member was not found  [#qubIT-Fenix-2465]

2.10.0 (29-01-2024)
- New Feature: FENIX-14082 - Added new client for CGD Member Photo service [#qubIT-Fenix-2465]
- Improvement: Adds dataSent field to CgdCommunicationLog [#qubIT-Fenix-4840]

2.9.0 (02-01-2024)
- Improvement: Adds CgdCommunicationLog entity [#qubIT-Fenix-4669]
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]

2.8.5 (24-08-2023)
- Bug fix: Correctly finding units in MoreThaOneSchool Strategy

2.8.4 (23-08-2023)
- Bug fix: Corrected form43 send when handling multiple school codes

2.8.3 (22-08-2023)
- Bug fix: Corrected iesCode handling in ReceiveMifare webservice

2.8.2 (10-08-2023)